# Aegis-AI-

./: .gitignore  README.md  Sarvaha.code-workspace  agent-core.code-workspace  agent-frontend.code-workspace
agent-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.json  package-lock.json  package.json  tsconfig.json
agent-backend/prisma/: schema.prisma
agent-backend/scripts/: deploy.sh
agent-backend/src/: app.controller.ts  app.module.ts  main.ts
agent-backend/src/account/: account.controller.ts  account.module.ts  account.service.ts  account.util.ts
agent-backend/src/async-context/: async-context.module.ts  async-context.service.ts
agent-backend/src/auth/: auth.constants.ts  auth.controller.ts  auth.d.ts  auth.enum.ts  auth.module.ts  auth.service.ts  (+1 more)
agent-core/: .docker.env.example  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  setup.sh
agent-core/.gitlab/issue_templates/: issue-template.md
agent-core/app/: __init__.py  main.py
agent-core/app/common/: constants.py  enums.py  models.py  prompts.py  types.py
agent-core/app/config/: __init__.py
agent-core/app/middlewares/: __init__.py
agent-core/app/modules/agent_backend/: __init__.py
agent-core/app/modules/bg_process/: __init__.py
agent-core/app/modules/core/: __init__.py  knowledge_bases.py  llm.py  memories.py  storage.py
agent-core/app/modules/core/agents/: __init__.py  descriptor_agent.py  gk_agent.py  query_expansion_agent.py  video_search_agent.py
agent-core/app/modules/core/teams/: __init__.py  customer_support_team.py
agent-core/app/modules/core/tools/: __init__.py  publisher.py
agent-core/app/modules/core/workflows/: qna_workflow.py
agent-core/app/modules/data/: embeddings.py  models.py
agent-core/app/modules/data/chunk/: fixed_chunking.py
agent-core/app/modules/data/utils/: __init__.py
agent-core/app/modules/db/: __init__.py  mod_milvus.py  vector_db.py
agent-core/app/modules/events/: __init__.py  training_events.py
agent-core/app/modules/rabbitmq/: __init__.py  listener.py
agent-core/app/modules/streaming/: __init__.py
agent-core/app/modules/tracing/: tracer.py
agent-core/app/modules/training/: __init__.py  training_types.py
agent-core/app/modules/training/markdown/: __init__.py
agent-core/app/modules/training/pdf/: __init__.py
agent-core/app/modules/training/scraper/: __init__.py  crawler4ai_scraper.py
agent-core/app/modules/training/sitemap/: __init__.py
agent-core/app/modules/training/utils/: __init__.py  delete_training.py  send_events.py  trigger_training.py
agent-core/app/modules/training/video/: __init__.py
agent-core/app/routes/: __init__.py  chat_routes.py  health_routes.py  scalar_docs_routes.py  stream_routes.py  tasks_routes.py
agent-core/app/services/: chat_service.py  tasks_service.py
agent-core/app/utils/: __init__.py  context.py  exceptions.py  http_client.py  image.py  json_utils.py  logger.py  ocr.py  rate_limiter.py  retry.py  s3.py  shlink.py  video.py
agent-core/scripts/: __init__.py  deploy.sh  quantize_reranker_model.py  run.sh
agent-frontend/: .deepsource.toml  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  components.json  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  training.controller.ts  vite.config.ts
agent-frontend/scripts/: deploy.sh
agent-frontend/src/: App.tsx  app.scss  index.css  main.tsx  vite-env.d.ts
(+166 files in other folders)
